apps/base/game/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
        - name: app-2048
          image: alexwhen/docker-2048
          imagePullPolicy: Always
          ports:
            - containerPort: 80
