apps/base/game/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-2048
spec:
  ports:
    - port: 80
      name: "http"
      targetPort: 80
  selector:
    app.kubernetes.io/name: app-2048
