apps/base/game/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-2048
                port:
                  name: http
      host: game-test.rahulpatil.dev
